.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

trunk
-----

Feb. 21, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray release v1.3.0

* Since V01-02-00

  * Updates to tests
  * @marialiubarska's work to support the `new genie reader <https://github.com/icecube/icetray/pull/2597>`_
  * Merge the two different finiteReco converters
  * Documentation cleanups
  * Address python deprecations
  * Address compilation warnings

* Add support for S-Frames in tableio

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

December 11, 2018, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------
Release V18-12-00

* trivial cleanups to tests and logging.

June 13, 2018, Alex Olivas  (olivas@icecube.umd.edu)
----------------------------------------------------
Release V18-06-00

* (r159919) latest version of pytables deprecates camelcase method names, switch to snakecase

November 15, 2017, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------
Release V17-11-00

* very minor cleanups

March 23, 2017, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V17-03-00

* (r1488889) Replace fractured but precise representation of event start and end in MJD with a double-precision value. This introduces a discretization of 300 ns that will increase to 600 ns in the next 100 years and 2500 in the next 1000. These are much smaller than the duration of a typical event, and can be ignored in coordinate calculations.

April 29, 2016, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V16-04-00

* Add a test that runs all the converters

March 21, 2016, don la dieu  (nega@icecube.umd.edu)
---------------------------------------------------
Release V16-03-00
