@@ -25,6 +25,7 @@
 #include <dataclasses/ModuleKey.h>
 #include <icetray/I3Frame.h>
 #include <tableio/converter/container_converter_detail.h>
+#include <dataclasses/physics/I3Particle.h>
 
 template <class converter_type,
           typename map_type = I3Map<OMKey, std::vector<typename converter_type::booked_type> >,
@@ -33,10 +34,29 @@ class I3MapOMKeyVectorConverter
   : public I3ConverterImplementation< frameobject_type > 
 {
 public:
-  I3MapOMKeyVectorConverter(bool bookGeometry = false)
-    : bookGeometry_(bookGeometry)
+  // Here, we explicitly create different converters for different kinds of arguments (to avoid boost.args errors about ambiguity)
+  // For both options
+  I3MapOMKeyVectorConverter(bool bookGeometry, std::string bookToParticle)
+    : bookGeometry_(bookGeometry),
+    bookToParticle_(bookToParticle)
+  {}
+  // For just one
+  I3MapOMKeyVectorConverter(std::string bookToParticle)
+    : bookGeometry_(false),
+    bookToParticle_(bookToParticle)
+  {}
+  // For just the other
+  I3MapOMKeyVectorConverter(bool bookGeometry)
+    : bookGeometry_(bookGeometry),
+    bookToParticle_("")
+  {}
+  // For neither
+  I3MapOMKeyVectorConverter()
+    : bookGeometry_(false),
+    bookToParticle_("")
   {}
 
+    
 protected:
   size_t GetNumberOfRows(const map_type& m) {
     log_trace("%s", __PRETTY_FUNCTION__);
@@ -64,6 +84,11 @@ protected:
       desc->AddField<double>("y", "m", "Y coordinate of the DOM");
       desc->AddField<double>("z", "m", "Z coordinate of the DOM");
     }
+    if (bookToParticle_ != "") {
+      desc->AddField<double>("rho_"+bookToParticle_, "m", "perpendicular distance from DOM to track");
+      desc->AddField<double>("l_"+bookToParticle_, "m", "longitudinal distance of the DOM along track from vertex");
+      desc->AddField<double>("r_"+bookToParticle_, "m", "distance from DOM to vertex");
+    }
     desc->AddField<tableio_size_t>("vector_index", "", "index in vector");
       
     if (m.size() && m.begin()->second.size()) {
@@ -84,7 +109,7 @@ protected:
     size_t index = 0;
 
     I3GeometryConstPtr geometry;
-    if (bookGeometry_) {
+    if ((bookGeometry_)||(bookToParticle_ != "")) {
       if (!this->currentFrame_)  // obsolete check?
         log_fatal("Trying to book geometry, but the current frame is not set.");
       geometry = this->currentFrame_->template Get<I3GeometryConstPtr>();
@@ -92,6 +117,16 @@ protected:
         log_error("%s: No geometry in frame", __PRETTY_FUNCTION__);
         return 0;
       }
+    }
+    I3ParticleConstPtr track;
+    if (bookToParticle_ != "") {
+        if (!this->currentFrame_)  // obsolete check?
+            log_fatal("Trying to book pulse relationship to track, but the current frame is not set.");
+        track = this->currentFrame_->template Get<I3ParticleConstPtr>(bookToParticle_);
+        if (!track) {
+            log_debug("%s: No Particle %s in frame... but we go on anyway", __PRETTY_FUNCTION__, bookToParticle_.c_str());
+            //return 0;
+        }
     }
 
     for(typename map_type::const_iterator mapiter = m.begin();
@@ -102,7 +137,7 @@ protected:
         OMKey key = mapiter->first;
         I3OMGeo omgeo;
 
-        if (bookGeometry_) {
+        if ((bookGeometry_)||(bookToParticle_ != "")) {
           I3OMGeoMap::const_iterator geoiter = geometry->omgeo.find(key);
           if (geoiter == geometry->omgeo.end()) {
             log_warn("%s: OMKey (%d,%d, %d) not in geometry!", __PRETTY_FUNCTION__,
@@ -130,6 +165,33 @@ protected:
               rows->Set<double>("y", omgeo.position.GetY());
               rows->Set<double>("z", omgeo.position.GetZ());
             }
+            if (bookToParticle_ != "") {
+                if (track) {
+                  log_debug("%s is present, let's fill it!", bookToParticle_.c_str());
+                  // This code stolen/adapted from toprec "GetDistTOAxis" and "GetDistToPlane" -- maybe there's a faster way? in dataclasses?
+                  double deltax = omgeo.position.GetX() - track->GetPos().GetX();
+                  double deltay = omgeo.position.GetY() - track->GetPos().GetY();
+                  double deltaz = omgeo.position.GetZ() - track->GetPos().GetZ();
+                  double nx = track->GetDir().GetX();
+                  double ny = track->GetDir().GetY();
+                  double nz = track->GetDir().GetZ();
+
+                  double abs_x_sq = deltax*deltax + deltay*deltay + deltaz*deltaz;
+                  double n_prod_x = nx*deltax + ny*deltay + nz*deltaz;
+                  double rho = sqrt(abs_x_sq - n_prod_x * n_prod_x);
+                  log_debug("Computing: delta-x y x = %f %f %f", deltax, deltay, deltaz);
+                  log_debug("Writing: rho, l, r = %f %f %f", rho, n_prod_x, sqrt(abs_x_sq));
+
+                  rows->Set<double>("rho_"+bookToParticle_, rho);
+                  rows->Set<double>("l_"+bookToParticle_, n_prod_x);
+                  rows->Set<double>("r_"+bookToParticle_, sqrt(abs_x_sq));
+                } else {
+                  log_debug("%s missing, but on we go with zeros!", bookToParticle_.c_str());
+                  rows->Set<double>("rho_"+bookToParticle_, 0);
+                  rows->Set<double>("l_"+bookToParticle_, 0);
+                  rows->Set<double>("r_"+bookToParticle_, 0);
+                }
+            }
             rows->Set<tableio_size_t>("vector_index", vecindex);
 
             detail::fill_single_row(converter_, *veciter, rows, this->currentFrame_);
@@ -149,6 +211,7 @@ protected:
 
 private:
   bool bookGeometry_;
+  std::string bookToParticle_;
   converter_type converter_;
 };
 
@@ -160,10 +223,28 @@ class I3MapModuleKeyVectorConverter
 : public I3ConverterImplementation< frameobject_type > 
 {
 public:
-    I3MapModuleKeyVectorConverter(bool bookGeometry = false)
-    : bookGeometry_(bookGeometry)
+    // Here, we explicitly create different converters for different kinds of arguments (to avoid boost.args errors about ambiguity)
+    // For if both arguments
+    I3MapModuleKeyVectorConverter(bool bookGeometry, std::string bookToParticle)
+    : bookGeometry_(bookGeometry),
+    bookToParticle_(bookToParticle)
     {}
-    
+    // For just one
+    I3MapModuleKeyVectorConverter(bool bookGeometry)
+    : bookGeometry_(bookGeometry),
+    bookToParticle_("")
+    {}
+    // For just the other
+    I3MapModuleKeyVectorConverter(std::string bookToParticle)
+    : bookGeometry_(false),
+    bookToParticle_(bookToParticle)
+    {}
+    // For neither
+    I3MapModuleKeyVectorConverter()
+    : bookGeometry_(false),
+    bookToParticle_("")
+    {}
+
 protected:
     size_t GetNumberOfRows(const map_type& m) {
         log_trace("%s", __PRETTY_FUNCTION__);
@@ -190,6 +271,11 @@ protected:
             desc->AddField<double>("y", "m", "Y coordinate of the DOM");
             desc->AddField<double>("z", "m", "Z coordinate of the DOM");
         }
+        if (bookToParticle_ != "") {
+            desc->AddField<double>("rho_"+bookToParticle_, "m", "perpendicular distance from DOM to track");
+            desc->AddField<double>("l_"+bookToParticle_, "m", "longitudinal distance of the DOM along track from vertex");
+            desc->AddField<double>("r_"+bookToParticle_, "m", "distance from DOM to vertex");
+        }
         desc->AddField<tableio_size_t>("vector_index", "", "index in vector");
         
         if (m.size() && m.begin()->second.size()) {
@@ -210,7 +296,7 @@ protected:
         size_t index = 0;
         
         I3ModuleGeoMapConstPtr moduleGeo;
-        if (bookGeometry_) {
+        if ((bookGeometry_)||(bookToParticle_ != "")) {
             if (!this->currentFrame_)  // obsolete check?
                 log_fatal("Trying to book geometry, but the current frame is not set.");
             moduleGeo = this->currentFrame_->template Get<I3ModuleGeoMapConstPtr>("I3ModuleGeoMap");
@@ -219,6 +305,17 @@ protected:
                 return 0;
             }
         }
+        I3ParticleConstPtr track;
+        if (bookToParticle_ != "") {
+            if (!this->currentFrame_)  // obsolete check?
+                log_fatal("Trying to book pulse relationship to track, but the current frame is not set.");
+            track = this->currentFrame_->template Get<I3ParticleConstPtr>(bookToParticle_);
+            if (!track) {
+                log_debug("%s: No Particle %s in frame, but on we go anyway", __PRETTY_FUNCTION__, bookToParticle_.c_str());
+                //return 0;
+            }
+        }
+
         
         for(typename map_type::const_iterator mapiter = m.begin();
             mapiter != m.end();
@@ -228,7 +325,7 @@ protected:
             ModuleKey key = mapiter->first;
             I3Position ompos;
             
-            if (bookGeometry_) {
+            if ((bookGeometry_)||(bookToParticle_ != "")) {
                 I3ModuleGeoMap::const_iterator geoiter = moduleGeo->find(key);
                 if (geoiter == moduleGeo->end()) {
                     log_warn("%s: ModuleKey (%d,%d) not in geometry!", __PRETTY_FUNCTION__,
@@ -254,6 +351,33 @@ protected:
                     rows->Set<double>("y", ompos.GetY());
                     rows->Set<double>("z", ompos.GetZ());
                 }
+                if (bookToParticle_ != "") {
+                    if (track) {
+                        log_debug("%s is present, let's fill it!", bookToParticle_.c_str());
+                        // This code stolen/adapted from toprec "GetDistTOAxis" and "GetDistToPlane" -- maybe there's a faster way? in dataclasses?
+                        double deltax = ompos.GetX() - track->GetPos().GetX();
+                        double deltay = ompos.GetY() - track->GetPos().GetY();
+                        double deltaz = ompos.GetZ() - track->GetPos().GetZ();
+                        double nx = track->GetDir().GetX();
+                        double ny = track->GetDir().GetY();
+                        double nz = track->GetDir().GetZ();
+
+                        double abs_x_sq = deltax*deltax + deltay*deltay + deltaz*deltaz;
+                        double n_prod_x = nx*deltax + ny*deltay + nz*deltaz;
+                        double rho = sqrt(abs_x_sq - n_prod_x * n_prod_x);
+                        log_debug("Computing: delta-x y x = %f %f %f", deltax, deltay, deltaz);
+                        log_debug("Writing: rho, l, r = %f %f %f", rho, n_prod_x, sqrt(abs_x_sq));
+
+                        rows->Set<double>("rho_"+bookToParticle_, rho);
+                        rows->Set<double>("l_"+bookToParticle_, n_prod_x);
+                        rows->Set<double>("r_"+bookToParticle_, sqrt(abs_x_sq));
+                    } else {
+                        log_debug("%s missing, but on we go!", bookToParticle_.c_str());
+                        rows->Set<double>("rho_"+bookToParticle_, 0);
+                        rows->Set<double>("l_"+bookToParticle_, 0);
+                        rows->Set<double>("r_"+bookToParticle_, 0);
+                    }
+                }
                 rows->Set<tableio_size_t>("vector_index", vecindex);
                 
                 detail::fill_single_row(converter_, *veciter, rows, this->currentFrame_);
@@ -270,16 +394,21 @@ protected:
     
 private:
     bool bookGeometry_;
+    std::string bookToParticle_;
     converter_type converter_;
 };
 
 
 #define I3_MAP_CONVERTER_EXPORT(converter, docstring)                   \
   I3CONVERTER_EXPORT(converter, docstring)                              \
-  .def(boost::python::init<bool>(boost::python::args("bookGeometry")))
+  .def(boost::python::init<bool, std::string>(boost::python::args("bookGeometry","bookToParticle"))) \
+  .def(boost::python::init<bool>(boost::python::args("bookGeometry"))) \
+  .def(boost::python::init<std::string>(boost::python::args("bookToParticle")))
 
 #define I3_MAP_CONVERTER_EXPORT_DEFAULT(converter, docstring)           \
   I3CONVERTER_EXPORT_DEFAULT(converter, docstring)                      \
-  .def(boost::python::init<bool>(boost::python::args("bookGeometry")))
+  .def(boost::python::init<bool, std::string>(boost::python::args("bookGeometry","bookToParticle"))) \
+  .def(boost::python::init<bool>(boost::python::args("bookGeometry"))) \
+  .def(boost::python::init<std::string>(boost::python::args("bookToParticle")))
 
 #endif // TABLEIO_I3MAPCONVERTER_H_INCLUDED
