@@ -7,6 +7,8 @@ Release Notes
 
 trunk
 -----
+* Add "bookToParticle" option to converter for I3Map's, which computes perpendicular distance to a track, 
+  longitudinal distance along a track, and distance to a vertex.  (Similar to "bookGeometry")
 
 Feb. 21, 2022 don la dieu (nega AT icecube.umd.edu)
 ---------------------------------------------------
